# infra2-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/infra2_sdk/: __init__.py  _wire.py  ci.py  delivery.py  deploy.py  refs.py
src/infra2_sdk/data/: stages.yaml
src/infra2_sdk/runtime/: __init__.py  _optional.py  _otel_env.py  config_schema.py  dependencies.py  environ.py  environment.py  http.py  identity.py  otel.py  postgres.py  probes.py  s3.py
tests/: test_ci.py  test_delivery.py  test_deploy.py  test_refs.py  test_runtime_config_schema.py  test_runtime_dependencies.py  test_runtime_environ.py  test_runtime_environment.py  test_runtime_http.py  test_runtime_identity.py  test_runtime_otel.py  test_runtime_postgres.py  test_runtime_probes.py  test_runtime_s3.py  wheel_smoke.py
