[project]
name = "infra2-sdk"
version = "0.1.0"
description = "Versioned contracts shared by infra2 and its applications"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Zitian Wang" },
]
dependencies = [
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "build>=1.2,<2",
    "pytest>=8,<10",
    "pytest-cov>=5,<8",
    "ruff>=0.12,<1",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
infra2_sdk = ["data/*.yaml"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["infra2_sdk"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
