[project]
name = "infra2-sdk"
version = "0.4.0"
description = "Portable environment contracts and standard-protocol runtime adapters"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Zitian Wang" },
]
dependencies = [
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
s3 = [
    "boto3>=1.34,<2",
]
postgres = [
    "psycopg[binary]>=3.2,<4",
]
otel = [
    "opentelemetry-api>=1.24,<2",
    "opentelemetry-sdk>=1.24,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.24,<2",
    "opentelemetry-instrumentation-logging>=0.45b0,<1",
]
http = [
    "httpx>=0.27,<1",
]
all = [
    "boto3>=1.34,<2",
    "httpx>=0.27,<1",
    "opentelemetry-api>=1.24,<2",
    "opentelemetry-sdk>=1.24,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.24,<2",
    "opentelemetry-instrumentation-logging>=0.45b0,<1",
    "psycopg[binary]>=3.2,<4",
]
dev = [
    "boto3>=1.34,<2",
    "build>=1.2,<2,!=1.5.1",
    "httpx>=0.27,<1",
    "opentelemetry-api>=1.24,<2",
    "opentelemetry-sdk>=1.24,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.24,<2",
    "opentelemetry-instrumentation-logging>=0.45b0,<1",
    "psycopg[binary]>=3.2,<4",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "pytest>=8,<10",
    "pytest-asyncio>=0.23,<2",
    "pytest-cov>=5,<8",
    "ruff>=0.12,<1",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
infra2_sdk = ["data/*.yaml"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["infra2_sdk"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
